# ethsydney

./: .gitignore  __hardhat.config.ts  foundry.toml  hardhat.config.js  hardhat.config.ts  package.json  tsconfig.json
artifacts/contracts/Counter.sol/: Counter.dbg.json  Counter.json
cache/: solidity-files-cache.json
contracts/: Connekt.sol  Connekt_VRF.sol  Connektvatar.sol  Connektvatar_VRF.sol  Counter.sol
contracts/interfaces/: IConnekt.sol  ICounter.sol
integration/: counter.test.ts
nftgenerator/: README.md  generateAvatars.ipynb  pyproject.toml
scripts/: console.ts  deploy.ts  utils.ts  utils2.ts
test/: Connektvatar.js
typechain-types/: Counter.ts  hardhat.d.ts  index.ts
typechain-types/factories/: Counter__factory.ts  index.ts
typechain-types/factories/interfaces/: ICounter__factory.ts  index.ts
typechain-types/interfaces/: ICounter.ts  index.ts
web/: package.json
web/public/: test.js
web/public/metadata/: metadata-0.json  metadata-1.json  metadata-10.json  metadata-11.json  metadata-12.json  metadata-13.json  metadata-14.json  metadata-15.json  metadata-16.json  metadata-17.json  metadata-18.json  metadata-19.json  metadata-2.json  metadata-20.json  metadata-21.json  metadata-22.json  metadata-23.json  metadata-24.json  metadata-25.json  metadata-26.json  metadata-27.json  metadata-28.json  metadata-29.json  metadata-3.json  metadata-30.json  metadata-31.json  metadata-32.json  metadata-33.json  metadata-34.json  metadata-35.json  metadata-36.json  metadata-37.json  metadata-38.json  (+65 more)
web/types/: global.d.ts  nfc-react-web.d.ts
(+9 files in other folders)
