[tool.poetry]
name = "nftgenerator"
version = "0.1.0"
description = ""
authors = ["Ahmed Mohamed <amfy10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coolname = "^2.2.0"
openai = "^1.25.1"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
